force-app/main/default/objects/Prior_Authorization__c/Prior_Authorization__c.object-meta.xml
<CustomObject>
    <label>Prior Authorization</label><pluralLabel>Prior Authorizations</pluralLabel>
    <nameField><label>PA Name</label><type>AutoNumber</type><displayFormat>PA-{00000}</displayFormat></nameField>
<sharingModel>ControlledByParent</sharingModel>
<enableActivities>true</enableActivities>
</CustomObject>