force-app/main/default/objects/Prior_Authorization__c/fields/Clinical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Notes__c</fullName><label>Clinical Notes</label><type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>