force-app/main/default/objects/Prior_Authorization__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName><label>Denial Reason</label><type>TextArea</type>
</CustomField>