force-app/main/default/objects/Prior_Authorization__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipName>PA_Drug</relationshipName>
    <relationshipLabel>Prior Authorizations</relationshipLabel>
</CustomField>