force-app/main/default/objects/Prior_Authorization__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PA_Enrollee</relationshipName>
    <relationshipLabel>Prior Authorizations</relationshipLabel>
</CustomField>