force-app/main/default/objects/Prior_Authorization__c/fields/ICD10_Codes__c.field-meta.xml
<CustomField>
    <fullName>ICD10_Codes__c</fullName><label>ICD-10 Codes</label><type>Text</type><length>255</length>
</CustomField>