force-app/main/default/objects/Prior_Authorization__c/fields/PA_Number__c.field-meta.xml
<CustomField>
    <fullName>PA_Number__c</fullName><label>PA Number</label><type>Text</type>
    <length>100</length><required>false</required>
<externalId>false</externalId>
</CustomField>