force-app/main/default/objects/Prior_Authorization__c/fields/PA_Status__c.field-meta.xml
<CustomField>
    <fullName>PA_Status__c</fullName><label>PA Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
        <value><fullName>Pending Payer Review</fullName><default>false</default><label>Pending Payer Review</label></value>
        <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        <value><fullName>Denied</fullName><default>false</default><label>Denied</label></value>
        <value><fullName>Appeal Submitted</fullName><default>false</default><label>Appeal Submitted</label></value>
        <value><fullName>Appeal Approved</fullName><default>false</default><label>Appeal Approved</label></value>
        <value><fullName>Appeal Denied</fullName><default>false</default><label>Appeal Denied</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition></valueSet>
</CustomField>