force-app/main/default/objects/Prior_Authorization__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName><label>Payer</label><type>Text</type>
    <length>255</length><required>false</required>
<externalId>false</externalId>
</CustomField>