force-app/main/default/objects/Prior_Authorization__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName><label>Submission Date</label><type>Date</type>
</CustomField>